Revert "feat: implement Project Valhalla (V6Value as a value record)"
This reverts commit 641f31757e8b8f6f6fa5f3e15792fd1c003193eb.